@@ -15,6 +15,8 @@
 * Fix for EAPOL, thanks to Francesco Sinopoli
 * Bug fix for ''--enable-chilliredir'' plus SSL
 * Signal handling clean-ups, using self-pipe technique
+* Better statedir handling - allowing full paths for various files
+* A timeout for ''chilli_query'' hardcoded to 10 seconds
 
 == ChangeLog (CoovaChilli-v1.2.3 svn revision 356) ==
 
